--- a/assets/client/lang/zh_cn.json
+++ b/assets/client/lang/zh_cn.json
@@ -1,3 +1,5 @@
 {
-    "client.tooltip.organ":"现在只能用来喂猪"
+    "client.tooltip.organ":"现在只能用来喂猪",
+    "client.tooltip.chain":"机械动力锁链传动请使用原版传动锁链",
+    "minecraft:chain":"传动锁链"
 }
